[gd_scene load_steps=4 format=3 uid="uid://78jtpbbmcqac"]

[ext_resource type="FontFile" uid="uid://c73xqc05ocf2v" path="res://scenes/resources/fonts/PressStart2P-Regular.ttf" id="1_ffpk0"]
[ext_resource type="Script" path="res://scenes/managers/score_manager/score_manager.gd" id="1_o4r5n"]
[ext_resource type="Theme" uid="uid://dotqp0rwr17pi" path="res://resources/theme.tres" id="2_up6mk"]

[node name="ScoreManager" type="CanvasLayer"]
script = ExtResource("1_o4r5n")
metadata/_edit_horizontal_guides_ = [12.0, 20.0]
metadata/_edit_vertical_guides_ = [12.0]

[node name="ScoreTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 21
theme_override_constants/margin_right = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_up6mk")
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_ffpk0")
theme_override_font_sizes/font_size = 5
text = "Score: 0"
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_up6mk")
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_ffpk0")
theme_override_font_sizes/font_size = 5
text = "Level: 1"
horizontal_alignment = 2
vertical_alignment = 1
